--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "C_Cpp.errorSquiggles": "disabled",
     "files.associations": {
-        "dirent.h": "c"
+        "dirent.h": "c",
+        "types.h": "c"
     }
 }
