--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "types.h": "c",
         "socket.h": "c",
         "stdio.h": "c",
-        "pwd.h": "c"
+        "pwd.h": "c",
+        "grp.h": "c"
     }
 }
